腾讯云视频测试

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,8 @@ dependencies {
     compile files('libs/jg_filter_sdk_1.1.jar')
     compile files('libs/wup-1.0.0.E-SNAPSHOT.jar')
     compile files('libs/Xg_sdk_v2.47_20161026_0936.jar')
+    //    OkHttp依赖
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:1.6.0'
+    compile 'com.squareup.okio:okio:1.5.0'
 }
